syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "AccommodationSuggestionApplication.Suggestion.Support.Grpc.Protos";


message GetAllSuggestedFlightsMessageProto {
    string placeOfDeparture = 1;
	string firstDayDate = 2;
	string placeOfArrival = 3;
	string lastDayDate = 4;
}

message GetAllSuggestedFlightsMessageProtoResponse {
  string flightsForGoing = 1;
  string flightsForReturning = 2;
}

message BookFlightMessageProto {
    string flightId = 1;
	string userId = 2;
	string numberOfTickets = 3;
	string apiKey = 4;
}

message BookFlightMessageProtoResponse {
  string isBooked = 1;
}

message CreateAccommodationProto{
	string accomodationName = 1;
	string hostEmail = 2;
}
message CreateAccommodationProtoResponse{
	bool isCreated = 1;
}
message CreateGuestProto{
	string guestEmail = 1;
}

message CreateGuestProtoResponse{
	bool isCreated = 1;
}

message CreateGradeProto{
	string accommodationName = 1;
	int32 grade = 2;
	string guestEmail = 3;
	string date = 4;
}
message CreateGradeProtoResponse{
	bool isCreated = 1;
}
